[package]
name = "seat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors ="0.7"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.15"
chrono = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "9"
